<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_see_pending"
        android:enabled="true"
        android:icon="@drawable/ic_list_white_24dp"
        android:title="@string/text_see_pending"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_from_pending_list"
        android:enabled="true"
        android:icon="@drawable/ic_playlist_add_white_24dp"
        android:title="@string/text_add_from_pending"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_add_task"
        android:enabled="true"
        android:icon="@drawable/ic_add_circle_outline_white_24dp"
        android:title="@string/text_add_task"
        app:showAsAction="ifRoom" />



</menu>