<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context="com.oestbalmer.android.getstuffdone.View.TaskManagerActivity">

    <android.support.v7.widget.CardView
        android:layout_margin="10dp"
        android:layout_width="350dp"
        android:layout_height="130dp"
        android:id="@+id/card_view"
        android:layout_gravity="center"
        app:cardElevation="10dp"
        app:cardCornerRadius="7dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/task_title"
                android:id="@+id/task_title"
                android:textSize="20dp"
                android:layout_margin="20dp"
                android:layout_centerHorizontal="true"/>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_remove_text"
                    android:theme="@style/PrimaryFlatButton"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/button_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_edit"
                    android:theme="@style/PrimaryFlatButton"
                    android:layout_weight="1"
                    />

                <Button
                    android:id="@+id/button_complete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_complete"
                    android:theme="@style/PrimaryFlatButton"
                    android:layout_weight="1"/>



            </LinearLayout>


        </RelativeLayout>




    </android.support.v7.widget.CardView>

</LinearLayout>
